@@ -1,5 +1,13 @@
 2011-08-09  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
 
+	Add ItkToolbox/MexBinaryErodeImageFilter.hpp,
+	ItkToolbox/MexBinaryErodeImageFilter.cpp:
+
+	- Copied from MexTemplateFilter.* to add support for
+	itkBinaryErodeImageFilter.h to itk_imfilter()
+
+2011-08-09  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
+
 	* Add ItkToolbox/MexTemplateFilter.hpp,
 	ItkToolbox/MexTemplateFilter.cpp:
 
